name:                shorty
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Alexey Gaziev
maintainer:          alex.gaziev@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable shorty
  main-is:             Server.hs
  build-depends:       base >=4.7 && <4.8
                     , scotty

  hs-source-dirs:      src

